# proyecto_integrador_IV

./: .dockerignore  .gitignore  Project.ipynb  README.md  dag.py  dockerfile  main.py  pyproject.toml
.airflow/: docker-compose.yml
.airflow/airflow/dags/: dag.py  main.py  pyproject.toml
.airflow/airflow/dags/queries/: global_ammount_order_status.sql  revenue_per_state.sql  top_10_least_revenue_categories.sql
.airflow/airflow/dags/src/: extract.py  plots.py
queries/: delivery_date_difference.sql  global_ammount_order_status.sql  real_vs_estimated_delivered_time.sql  revenue_by_month_year.sql  revenue_per_state.sql  top_10_least_revenue_categories.sql  top_10_revenue_categories.sql
src/: config.py  extract.py  load.py  plots.py  transform.py
tests/: test_extract.py  test_transform.py
