[project]
name = "proyecto-integrador"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==22.12.0",
    "db-sqlite3==0.0.1",
    "ipykernel>=6.30.1",
    "matplotlib==3.6.2",
    "nbformat==5.7.3",
    "pandas==1.5.2",
    "plotly-express==0.4.1",
    "pytest==7.2.1",
    "requests==2.26.0",
    "seaborn==0.11.2",
    "sqlalchemy==1.4.45",
]

[dependency-groups]
dev = [
    "pytest>=7.2.1",
]
