[project]
name = "proyecto-integrador"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "db-sqlite3>=0.0.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "pandas>=2.3.2",
    "plotly-express>=0.4.1",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "pytest>=7.2.1",
]
